# ergo-rust-node

./: .gitignore  CLAUDE.md  Cargo.toml  ergo-node.toml  monitor-sync.sh  node-architecture.md
crates/ergo-api/: Cargo.toml
crates/ergo-api/assets/panel/: app.js  index.html  style.css
crates/ergo-api/src/: error.rs  lib.rs  openapi.rs  routes.rs  state.rs
crates/ergo-api/src/handlers/: blockchain.rs  blocks.rs  emission.rs  info.rs  mining.rs  mod.rs  node.rs  panel.rs  peers.rs  scan.rs  script.rs  transactions.rs  utils.rs  utxo.rs  wallet.rs
crates/ergo-consensus/: Cargo.toml
crates/ergo-consensus/src/: autolykos.rs  block.rs  block_validation.rs  chain_params.rs  cost.rs  difficulty.rs  eip37_difficulty.rs  error.rs  extension.rs  lib.rs  pow_test_vectors.rs  tx_validation.rs  validation.rs
crates/ergo-consensus/src/nipopow/: algos.rs  interlinks.rs  mod.rs  popow_header.rs  proof.rs  test_helpers.rs  verifier.rs
crates/ergo-consensus/src/reemission/: mod.rs  rules.rs  settings.rs
crates/ergo-mempool/: Cargo.toml
crates/ergo-mempool/src/: error.rs  lib.rs  ordering.rs  pool.rs
crates/ergo-mining/: Cargo.toml
crates/ergo-mining/src/: candidate.rs  coinbase.rs  error.rs  lib.rs  miner.rs  solver.rs  worker.rs
crates/ergo-network/: Cargo.toml
crates/ergo-network/examples/: debug_handshake.rs
crates/ergo-network/src/: codec.rs  connection.rs  decline.rs  discovery.rs  error.rs  handshake.rs  lib.rs  message.rs  peer.rs  penalties.rs  scoring.rs  service.rs
crates/ergo-node/: Cargo.toml
crates/ergo-node/src/: config.rs  main.rs  node.rs
crates/ergo-state/: Cargo.toml
crates/ergo-state/src/: error.rs  history.rs  lib.rs  manager.rs  snapshots.rs  utxo.rs
crates/ergo-storage/: Cargo.toml
crates/ergo-storage/src/: batch.rs  database.rs  error.rs  lib.rs
crates/ergo-storage/src/indexer/: balance.rs  indexed_address.rs  indexed_box.rs  indexed_token.rs  indexed_transaction.rs  mod.rs  state.rs
crates/ergo-storage/src/scan/: mod.rs  predicate.rs  storage.rs  types.rs
crates/ergo-sync/: Cargo.toml
crates/ergo-sync/src/: download.rs  error.rs  lib.rs  protocol.rs  sync.rs
crates/ergo-tests/: Cargo.toml
crates/ergo-tests/proptest-regressions/: property_tests.txt
crates/ergo-tests/src/: api_tests.rs  generators.rs  harness.rs  lib.rs  mining_tests.rs  node_tests.rs  property_tests.rs  sanity_tests.rs  state_tests.rs  storage_tests.rs  sync_tests.rs  validation_tests.rs
crates/ergo-wallet/: Cargo.toml
crates/ergo-wallet/src/: error.rs  keystore.rs  lib.rs  tracker.rs  tx_builder.rs  wallet.rs
docs/: GAP_01_TEST_COVERAGE.md  GAP_02_API_ENDPOINTS.md  GAP_03_INTEGRATION_TESTS.md  GAP_04_PROPERTY_TESTING.md  GAP_05_SCAN_API.md  GAP_06_DNS_DISCOVERY.md  GAP_07_PEER_SCORING.md  GAP_08_CPU_MINING.md  GAP_09_BLOCK_COST.md  GAP_10_STORAGE_TESTS.md  IMPLEMENTATION_PLAN.md  SCALA_COMPARISON.md  scala-spec-extraction.md
