[package]
name = "ergo-node"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ergo blockchain node implementation in Rust"

[[bin]]
name = "ergo-node"
path = "src/main.rs"

[dependencies]
# Internal crates
ergo-storage.workspace = true
ergo-consensus.workspace = true
ergo-state.workspace = true
ergo-mempool.workspace = true
ergo-network.workspace = true
ergo-sync.workspace = true
ergo-api.workspace = true
ergo-mining.workspace = true
ergo-wallet.workspace = true

# sigma-rust crates
ergo-lib.workspace = true

# Async
tokio.workspace = true
futures.workspace = true

# API
axum.workspace = true

# CLI and config
clap.workspace = true
toml.workspace = true
config.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
hex.workspace = true
num_cpus = "1.16"

# Optional memory profiling
dhat = { version = "0.3", optional = true }

[features]
dhat-heap = ["dhat"]

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
