[package]
name = "ergo-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Storage layer for Ergo Rust Node - RocksDB abstraction and indexes"

[dependencies]
# Storage
rocksdb.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
hex.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Utilities
bytes.workspace = true
parking_lot.workspace = true

# Cryptography
blake2 = "0.10"
digest = "0.10"

[dev-dependencies]
tempfile = "3"
